--- a/css/styles.css
+++ b/css/styles.css
@@ -245,7 +245,6 @@ img {
 
 .section-b {
     padding-top: 94px;
-    background-color: #F5F4FA;
 }
 
 .section-b-text {
@@ -261,9 +260,10 @@ img {
 .section-b-svg {
     margin-bottom: 30px;
     display: flex;
-    max-width: 270px;
-    max-height: 120px;
+    height: 120px;
     justify-content: center;
+    align-items: center;
+    background-color: #F5F4FA;
 }
 
 .section-b-icon {
@@ -350,6 +350,7 @@ img {
     padding-left: 10px;
     padding-right: 10px;
     text-align: center;
+    background-color: #FFFFFF;
     box-shadow: 0px 1px 3px 
     rgba(0, 0, 0, 0.12), 0px 1px 1px 
     rgba(0, 0, 0, 0.14), 0px 2px 1px 
@@ -483,6 +484,7 @@ img {
 .section-nav-text {
     display: flex;
     gap: 8px;
+    margin-bottom: 50px;
     justify-content: center;
 }
 
@@ -541,7 +543,7 @@ img {
     color: #212121;
     border-radius: 4px;
     padding: 6px 22px;
-    margin-bottom: 50px;
+    
     
 }
 
@@ -564,7 +566,6 @@ img {
     display: flex;
     flex-wrap: wrap;
     gap: 27px;
-    margin-top: 34px;
 }
 
 .portfolio-hover:hover {
